--- a/tests/run_add_sale_tests.html
+++ b/tests/run_add_sale_tests.html
@@ -10,6 +10,6 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
-  <script src="run_add_sale_tests.js"></script>
+  <script src="add_sale_tests.js"></script>
 </body>
 </html>
