--- a/tests/run_add_sale_tests.html
+++ b/tests/run_add_sale_tests.html
@@ -10,7 +10,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
-  <script src="../js/add_sales.js"></script>
+  <script src="add_sale.js"></script>
   <script src="add_sale_tests.js"></script>
 </body>
 </html>
