--- a/tests/run_add_sale_tests.html
+++ b/tests/run_add_sale_tests.html
@@ -9,6 +9,8 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+  
+  <p id="datetime"></p>  
   <script src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
   <script src="add_sale_tests.js"></script>
   <script src="add_sale.js"></script>
