--- a/tests/run_add_sale_tests.html
+++ b/tests/run_add_sale_tests.html
@@ -14,6 +14,7 @@
   <script src="https://code.jquery.com/qunit/qunit-2.3.2.js"></script>
   <script src="add_sale_tests.js"></script>
   <script src="add_sale.js"></script>
+  <script src="validate_orderline.js"></script>
  
 </body>
 </html>
